Fix broken styles of select/input in site configurations

--- a/pixelegg/less/layout_dialog.less
+++ b/pixelegg/less/layout_dialog.less
@@ -58,10 +58,7 @@ form.et2_container {
                             .et2_box_widget {
 
                                 select, input{
-                                    padding-right: 0;
-									padding-top: 0;
-									padding-bottom: 0;
-                                    font-size: 0.95em;
+                                   
                                 }
 
 							    input {
